src/tui/tests/snapshots/codex_usage_monit__tui__tests__integration_scenarios__tui_summary_turn_tree_light_60x24.snap
---
source: src/tui/tests/integration_scenarios.rs
expression: summary.frame().snapshot_text()
---
size=60x24
rows:
00| 1 Ovw  |  2 Tr  |  U Sum  |  3 Other  |  4 Set  | [S]Source
01|[F2][C][7][M] [K][E][A] [B] 1d [I]Inspect [G]All [L] [↵] [X]
02|┌Usage tree · source All · Cycle · known 320.0K · PARTIAL──┐
03|│ Tokens         KNOWN%   TYPE · PROJECT / SESSION / TURN  │
04|│ 190.0K         59.4%    [-] PROJ ■ alpha-service         █
05|│▌190.0K         59.4%    └─ [-] SESS API billing dashboard█
06|│ 190.0K         59.4%      └─ TURN Explain the API billing█
07|│ 90.0K          28.1%    [+] PROJ ■ billing-cli           │
08|└──────────────────────────────────────────────────────────┘
09|┌Top projects · Tokens · share of known────────────────────┐
10|│■ alpha-service                  190.0K  59.4% ███████····│
11|│■ billing-cli                     90.0K  28.1% ███········│
12|│■ docs-site                       40.0K  12.5% █··········│
13|│                                                          │
14|└──────────────────────────────────────────────────────────┘
15|┌Project mix · Tokens · 1d local · 0C/4P/0M · all projects─┐
16|│07-12 · P lower bound · Total 40.0K · ■ docs-site 40.0K   │
17|│LOWER · C/P/M PPPP                                        │
18|│200.0K│                                                   │
19|│100.0K│  ▄▄▄▄▄▄▄▄▄▄▄               ▄▄▄▄▄▄▄▄               │
20|│0     │                      ▀▀▀▀▀▀▀▀           ▀▀▀▀▀▀▄▄▄▄│
21|│      └───────────────────────────────────────────────────│
22|│  07-09                       07-11                  07-12│
23|└──────────────────────────────────────────────────────────┘
styles:
00:001+001 fg=#006c75 bg=#f7f9fc mods=bold text="1"
00:002+009 fg=#5f6b7a bg=#f7f9fc mods=none text=" Ovw  |  "
00:011+001 fg=#006c75 bg=#f7f9fc mods=bold text="2"
00:012+008 fg=#5f6b7a bg=#f7f9fc mods=none text=" Tr  |  "
00:020+001 fg=#006c75 bg=#f7f9fc mods=bold text="U"
00:022+003 fg=#17202a bg=#f7f9fc mods=bold text="Sum"
00:025+005 fg=#5f6b7a bg=#f7f9fc mods=none text="  |  "
00:030+001 fg=#006c75 bg=#f7f9fc mods=bold text="3"
00:031+011 fg=#5f6b7a bg=#f7f9fc mods=none text=" Other  |  "
00:042+001 fg=#006c75 bg=#f7f9fc mods=bold text="4"
00:043+009 fg=#5f6b7a bg=#f7f9fc mods=none text=" Set  | ["
00:052+001 fg=#006c75 bg=#f7f9fc mods=bold text="S"
00:053+007 fg=#5f6b7a bg=#f7f9fc mods=none text="]Source"
01:000+001 fg=#5f6b7a bg=#f7f9fc mods=none text="["
01:001+002 fg=#006c75 bg=#f7f9fc mods=bold text="F2"
01:003+001 fg=#5f6b7a bg=#f7f9fc mods=none text="]"
01:004+001 fg=#f7f9fc bg=#006c75 mods=bold text="["
01:005+001 fg=#f7f9fc bg=#006c75 mods=bold+underline text="C"
01:006+001 fg=#f7f9fc bg=#006c75 mods=bold text="]"
01:007+001 fg=#5f6b7a bg=#f7f9fc mods=none text="["
01:008+001 fg=#006c75 bg=#f7f9fc mods=bold text="7"
01:009+002 fg=#5f6b7a bg=#f7f9fc mods=none text="]["
01:011+001 fg=#006c75 bg=#f7f9fc mods=bold text="M"
01:012+002 fg=#5f6b7a bg=#f7f9fc mods=none text="] "
01:014+001 fg=#f7f9fc bg=#006c75 mods=bold text="["
01:015+001 fg=#f7f9fc bg=#006c75 mods=bold+underline text="K"
01:016+001 fg=#f7f9fc bg=#006c75 mods=bold text="]"
01:017+001 fg=#5f6b7a bg=#f7f9fc mods=none text="["
01:018+001 fg=#006c75 bg=#f7f9fc mods=bold text="E"
01:019+002 fg=#5f6b7a bg=#f7f9fc mods=none text="]["
01:021+001 fg=#006c75 bg=#f7f9fc mods=bold text="A"
01:022+003 fg=#5f6b7a bg=#f7f9fc mods=none text="] ["
01:025+001 fg=#006c75 bg=#f7f9fc mods=bold text="B"
01:026+006 fg=#5f6b7a bg=#f7f9fc mods=none text="] 1d ["
01:032+001 fg=#006c75 bg=#f7f9fc mods=bold text="I"
01:033+017 fg=#5f6b7a bg=#f7f9fc mods=none text="]Inspect [G]All ["
01:050+001 fg=#006c75 bg=#f7f9fc mods=bold text="L"
01:051+003 fg=#5f6b7a bg=#f7f9fc mods=none text="] ["
01:054+001 fg=#006c75 bg=#f7f9fc mods=bold text="↵"
01:055+003 fg=#5f6b7a bg=#f7f9fc mods=none text="] ["
01:058+001 fg=#006c75 bg=#f7f9fc mods=bold text="X"
01:059+001 fg=#5f6b7a bg=#f7f9fc mods=none text="]"
02:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="┌"
02:001+056 fg=#17202a bg=#f7f9fc mods=bold text="Usage tree · source All · Cycle · known 320.0K · PARTIAL"
02:057+003 fg=#7d8998 bg=#f7f9fc mods=none text="──┐"
03:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
03:001+058 fg=#006c75 bg=#f7f9fc mods=bold text=" Tokens         KNOWN%   TYPE · PROJECT / SESSION / TURN  "
03:059+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
04:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
04:001+025 fg=#17202a bg=#f7f9fc mods=bold text=" 190.0K         59.4%    "
04:026+004 fg=#5f6b7a bg=#f7f9fc mods=bold text="[-] "
04:030+005 fg=#006c75 bg=#f7f9fc mods=bold text="PROJ "
04:035+002 fg=#9d7625 bg=#f7f9fc mods=bold text="■ "
04:037+022 fg=#17202a bg=#f7f9fc mods=bold text="alpha-service         "
04:059+001 fg=#5f6b7a bg=#f7f9fc mods=bold text="█"
05:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
05:001+029 fg=#f7f9fc bg=#006c75 mods=bold text="▌190.0K         59.4%    └─ ["
05:030+001 fg=#f7f9fc bg=#006c75 mods=bold+underline text="-"
05:031+028 fg=#f7f9fc bg=#006c75 mods=bold text="] SESS API billing dashboard"
05:059+001 fg=#5f6b7a bg=#f7f9fc mods=bold text="█"
06:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
06:001+025 fg=#17202a bg=#f7f9fc mods=none text=" 190.0K         59.4%    "
06:026+010 fg=#5f6b7a bg=#f7f9fc mods=none text="  └─ TURN "
06:036+023 fg=#17202a bg=#f7f9fc mods=none text="Explain the API billing"
06:059+001 fg=#5f6b7a bg=#f7f9fc mods=bold text="█"
07:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
07:001+025 fg=#17202a bg=#f7f9fc mods=bold text=" 90.0K          28.1%    "
07:026+004 fg=#5f6b7a bg=#f7f9fc mods=bold text="[+] "
07:030+005 fg=#006c75 bg=#f7f9fc mods=bold text="PROJ "
07:035+002 fg=#9b2240 bg=#f7f9fc mods=bold text="■ "
07:037+022 fg=#17202a bg=#f7f9fc mods=bold text="billing-cli           "
07:059+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
08:000+060 fg=#7d8998 bg=#f7f9fc mods=none text="└──────────────────────────────────────────────────────────┘"
09:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="┌"
09:001+038 fg=#17202a bg=#f7f9fc mods=bold text="Top projects · Tokens · share of known"
09:039+021 fg=#7d8998 bg=#f7f9fc mods=none text="────────────────────┐"
10:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
10:001+002 fg=#9d7625 bg=#f7f9fc mods=none text="■ "
10:003+037 fg=#17202a bg=#f7f9fc mods=none text="alpha-service                  190.0K"
10:040+007 fg=#5f6b7a bg=#f7f9fc mods=none text="  59.4%"
10:048+007 fg=#9d7625 bg=#f7f9fc mods=bold text="███████"
10:055+004 fg=#5f6b7a bg=#f7f9fc mods=none text="····"
10:059+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
11:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
11:001+002 fg=#9b2240 bg=#f7f9fc mods=none text="■ "
11:003+037 fg=#17202a bg=#f7f9fc mods=none text="billing-cli                     90.0K"
11:040+007 fg=#5f6b7a bg=#f7f9fc mods=none text="  28.1%"
11:048+003 fg=#9b2240 bg=#f7f9fc mods=bold text="███"
11:051+008 fg=#5f6b7a bg=#f7f9fc mods=none text="········"
11:059+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
12:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
12:001+002 fg=#21a16b bg=#f7f9fc mods=none text="■ "
12:003+037 fg=#17202a bg=#f7f9fc mods=none text="docs-site                       40.0K"
12:040+007 fg=#5f6b7a bg=#f7f9fc mods=none text="  12.5%"
12:048+001 fg=#21a16b bg=#f7f9fc mods=bold text="█"
12:049+010 fg=#5f6b7a bg=#f7f9fc mods=none text="··········"
12:059+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
13:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
13:059+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
14:000+060 fg=#7d8998 bg=#f7f9fc mods=none text="└──────────────────────────────────────────────────────────┘"
15:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="┌"
15:001+057 fg=#17202a bg=#f7f9fc mods=bold text="Project mix · Tokens · 1d local · 0C/4P/0M · all projects"
15:058+002 fg=#7d8998 bg=#f7f9fc mods=none text="─┐"
16:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
16:001+005 fg=#17202a bg=#f7f9fc mods=bold text="07-12"
16:006+003 fg=#17202a bg=#f7f9fc mods=none text=" · "
16:009+013 fg=#8a5900 bg=#f7f9fc mods=bold text="P lower bound"
16:022+017 fg=#17202a bg=#f7f9fc mods=none text=" · Total 40.0K · "
16:039+002 fg=#21a16b bg=#f7f9fc mods=none text="■ "
16:041+018 fg=#17202a bg=#f7f9fc mods=none text="docs-site 40.0K   "
16:059+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
17:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
17:001+018 fg=#8a5900 bg=#f7f9fc mods=none text="LOWER · C/P/M PPPP"
17:059+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
18:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
18:001+006 fg=#17202a bg=#f7f9fc mods=none text="200.0K"
18:007+001 fg=#5f6b7a bg=#f7f9fc mods=none text="│"
18:059+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
19:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
19:001+006 fg=#17202a bg=#f7f9fc mods=none text="100.0K"
19:007+001 fg=#5f6b7a bg=#f7f9fc mods=none text="│"
19:008+002 fg=#af9050 bg=#af9050 mods=none text="  "
19:010+011 fg=#af9050 bg=#f7f9fc mods=none text="▄▄▄▄▄▄▄▄▄▄▄"
19:036+007 fg=#ad4d66 bg=#f7f9fc mods=none text="▄▄▄▄▄▄▄"
19:043+001 fg=#4cb388 bg=#f7f9fc mods=none text="▄"
19:059+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
20:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
20:001+006 fg=#17202a bg=#f7f9fc mods=none text="0     "
20:007+001 fg=#5f6b7a bg=#f7f9fc mods=none text="│"
20:008+022 fg=#af9050 bg=#af9050 mods=none text="                      "
20:030+008 fg=#ad4d66 bg=#af9050 mods=none text="▀▀▀▀▀▀▀▀"
20:038+011 fg=#ad4d66 bg=#ad4d66 mods=none text="           "
20:049+006 fg=#4cb388 bg=#ad4d66 mods=none text="▀▀▀▀▀▀"
20:055+004 fg=#4cb388 bg=#f7f9fc mods=none text="▄▄▄▄"
20:059+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
21:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
21:007+052 fg=#5f6b7a bg=#f7f9fc mods=none text="└───────────────────────────────────────────────────"
21:059+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
22:000+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
22:001+058 fg=#17202a bg=#f7f9fc mods=none text="  07-09                       07-11                  07-12"
22:059+001 fg=#7d8998 bg=#f7f9fc mods=none text="│"
23:000+060 fg=#7d8998 bg=#f7f9fc mods=none text="└──────────────────────────────────────────────────────────┘"
controls:
ViewOverview binding=1 rect=0,0,7,1
ViewTrends binding=2 rect=10,0,6,1
ViewSummary binding=U rect=19,0,7,1
ViewOther binding=3 rect=29,0,9,1
ViewSettings binding=4 rect=41,0,7,1
HistorySource binding=S rect=51,0,9,1
SummaryRangeCycle binding=C rect=4,1,3,1
SummaryRangeSevenDays binding=7 rect=7,1,3,1
SummaryRangeThirtyDays binding=M rect=10,1,3,1
SummaryMetricTokens binding=K rect=14,1,3,1
SummaryMetricEstimated binding=E rect=17,1,3,1
SummaryMetricApiEquivalent binding=A rect=20,1,3,1
SummaryBucketGrain binding=B rect=24,1,6,1
SummaryAllProjects binding=G rect=42,1,6,1
SummaryLongContext binding=L rect=49,1,3,1
SummaryInspect binding=I rect=31,1,10,1
SummaryToggle binding=↵ rect=53,1,3,1
SummaryCollapseAll binding=X rect=57,1,3,1
